# Metronome

./: .gitignore  README.md  analysis.ipynb  building.ipynb  distribution_sampling copy.ipynb  distribution_sampling.ipynb  erroneousmakefile  gmon.out  log.py  log.txt  main.py  makefile  meson.build  metronome  objectives.md  oldmakefile  output.txt  probe.py  requirements.txt  reward_distribution_0.eps  reward_distribution_1.eps  reward_distribution_10.eps  reward_distribution_11.eps  reward_distribution_12.eps  reward_distribution_13.eps  reward_distribution_14.eps  reward_distribution_15.eps  reward_distribution_16.eps  reward_distribution_17.eps  reward_distribution_18.eps  reward_distribution_19.eps  reward_distribution_2.eps  reward_distribution_20.eps  reward_distribution_21.eps  reward_distribution_22.eps  reward_distribution_23.eps  reward_distribution_24.eps  reward_distribution_25.eps  reward_distribution_26.eps  reward_distribution_27.eps  (+9 more)
docs/: Doxyfile  SolutionArchitecture.xopp  changelog.md  list.md  mt_specs.md  new_focus_literature.md  objectives.md  plan.md  stuff-to-ask.md  stuff.md  todo.md
metronome/: timetable.py
notebooks/: distribution_sampling.ipynb
output/: violations.txtaverage_violations.txt  violations.txtcompartmental_violations.txt  violations.txtminimum_violations.txt
samples/: \  simpletimetable.mt  spring-semester-my-2023.mt
src/: MultiArmBanditSolver.py  __init__.py  a.txt  breadth_first_search.py  common.c  common.h  gen.h  main.c  main.py  metronome.c  metronome.h  node.py  parser.c  parser.h  pmetronome.py  sudoku.py  timetable.c  timetable.h  tree_search.py
(+221 files in other folders)
